[gd_scene load_steps=21 format=3 uid="uid://d0mst4eki2yyd"]

[ext_resource type="Script" path="res://Entities/Player/PlayerController.gd" id="1_3iq6n"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="2_fvu4l"]
[ext_resource type="PackedScene" uid="uid://dd1bjjaxa7dur" path="res://Entities/Player/Inventory/Inventory.tscn" id="2_urbfw"]
[ext_resource type="Texture2D" uid="uid://c43xb8p2q3io8" path="res://Entities/Player/player.png" id="3_w4srp"]
[ext_resource type="PackedScene" uid="uid://ywpg5nkhidqk" path="res://Entities/Player/Weapon Handling/WeaponHandler.tscn" id="7_cn85d"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_2d.gd" id="7_ikipm"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="8_kuc5k"]
[ext_resource type="PackedScene" uid="uid://5xry0mnc8j7o" path="res://Entities/Player/HUD/HUD.tscn" id="9_hyecf"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0n3kf"]
radius = 16.0
height = 48.0

[sub_resource type="Animation" id="Animation_gdeu0"]
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_u0rdc"]
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_mxlqg"]
length = 0.275
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.075, 0.175),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [6, 7, 8]
}

[sub_resource type="Animation" id="Animation_eqvl6"]
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [9, 10, 11]
}

[sub_resource type="Animation" id="Animation_oxrd0"]
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_yushi"]
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4p46q"]
_data = {
"idle_down": SubResource("Animation_gdeu0"),
"idle_up": SubResource("Animation_u0rdc"),
"roll_down": SubResource("Animation_mxlqg"),
"roll_up": SubResource("Animation_eqvl6"),
"walk_down": SubResource("Animation_oxrd0"),
"walk_up": SubResource("Animation_yushi")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5tmpo"]
radius = 16.0
height = 64.0

[sub_resource type="CircleShape2D" id="CircleShape2D_3xweo"]
radius = 96.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_brdpf"]
radius = 24.0
height = 64.0

[sub_resource type="Resource" id="Resource_2evhq"]
script = ExtResource("8_kuc5k")
duration = 1.0
transition = 0
ease = 2

[node name="Player" type="CharacterBody2D" groups=["Player"]]
process_mode = 3
y_sort_enabled = true
collision_layer = 34
collision_mask = 33
motion_mode = 1
script = ExtResource("1_3iq6n")
DODGE_COOLDOWN = 0.7

[node name="Camera" type="Camera2D" parent="."]
physics_interpolation_mode = 1
process_callback = 0
position_smoothing_speed = 1.0
drag_left_margin = 0.3
drag_top_margin = 0.3
drag_right_margin = 0.3
drag_bottom_margin = 0.4
editor_draw_drag_margin = true

[node name="PhantomCameraHost" type="Node" parent="Camera"]
process_priority = 300
process_physics_priority = 300
script = ExtResource("2_fvu4l")

[node name="Sprite" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(5, 5)
texture = ExtResource("3_w4srp")
hframes = 4
vframes = 3
frame = 2
metadata/_aseprite_wizard_config_ = {
"i_mode": -1,
"keep_anim_length": false,
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"player": "AnimationPlayer",
"slice": "",
"source": "res://Entities/Player/Art/player.aseprite"
}
metadata/_aseprite_wizard_interface_config_ = {
"animation_section": false,
"layer_section": false,
"output_section": true,
"slice_section": false
}
metadata/_aseprite_wizard_source_file_hash_ = "508620da1326c00cf1dddb15e58cc1a7"

[node name="BodyShape" type="CollisionShape2D" parent="."]
position = Vector2(0, 8)
shape = SubResource("CapsuleShape2D_0n3kf")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4p46q")
}

[node name="ItemCollect" type="Node2D" parent="."]

[node name="Collect" type="Area2D" parent="ItemCollect"]
collision_layer = 2
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemCollect/Collect"]
position = Vector2(0, 8)
shape = SubResource("CapsuleShape2D_5tmpo")

[node name="Trigger" type="Area2D" parent="ItemCollect"]
collision_layer = 4
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemCollect/Trigger"]
shape = SubResource("CircleShape2D_3xweo")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 8)
shape = SubResource("CapsuleShape2D_brdpf")
disabled = true

[node name="Timers" type="Node" parent="."]

[node name="DodgeTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="Weapon" type="Node2D" parent="."]

[node name="WeaponHandler" parent="Weapon" instance=ExtResource("7_cn85d")]
position = Vector2(75, 0)

[node name="UI" type="Node" parent="."]

[node name="Inventory" parent="UI" instance=ExtResource("2_urbfw")]
visible = false

[node name="HUD" parent="UI" instance=ExtResource("9_hyecf")]

[node name="PhantomCamera2D" type="Node2D" parent="." node_paths=PackedStringArray("follow_target")]
script = ExtResource("7_ikipm")
follow_mode = 2
follow_target = NodePath("..")
tween_resource = SubResource("Resource_2evhq")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
[connection signal="area_entered" from="ItemCollect/Collect" to="." method="_on_item_collect"]
